--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>💞 Ясина я тебя люблю 💞</title>
-  <link rel="stylesheet" href="1111.css">
+  <title>Ясина, я тебя люблю ❤️</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="text">Ясина я тебя люблю 💞</div>
-  <div class="orbit">
-    <div class="heart pink"></div>
-    <div class="heart purple"></div>
+  <div class="text">Ясина, я тебя люблю ❤️</div>
+  <div class="big-heart">
+    <!-- Маленькие сердечки будут добавляться здесь -->
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
