--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ясина, я тебя люблю ❤️</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="1111.css">
 </head>
 <body>
   <div class="text">Ясина, я тебя люблю ❤️</div>
   <div class="big-heart">
     <!-- Маленькие сердечки будут добавляться здесь -->
   </div>
-  <script src="script.js"></script>
+  <script src="221.js"></script>
 </body>
 </html>
